--- a/css/detailartist.css
+++ b/css/detailartist.css
@@ -152,7 +152,7 @@ footer{
     border-radius: 10px;
     border: solid #353535 1.5px;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 4fr 1fr;
     margin-top: 10px;
 }
 .AgusLerej{
@@ -176,6 +176,8 @@ footer{
 .redesSociales{
     text-align: right;
     padding-right: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 @media(max-width: 768px){
     header{
@@ -231,7 +233,6 @@ footer{
 }
 @media(max-width: 320px){
     header{
-        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
         display: grid;
         grid-template-columns: none; 
         background: rgb(0,0,0);
@@ -283,6 +284,24 @@ footer{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-
+    }
+    footer{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    .AgusLerej{
+        font-size: 10px;
+    }
+    .facebook{
+        height: 10px;
+        margin: auto;
+    }
+    .twitter{
+        height: 10px;
+        margin: auto;
+    }
+    .deezer{
+        height: 15px;
+        margin: auto;
     }
 }
