--- a/css/generos.css
+++ b/css/generos.css
@@ -66,7 +66,7 @@ footer{
     border-radius: 10px;
     border: solid #353535 1.5px;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 4fr 1fr;
     margin-top: 10px;
 }
 .AgusLerej{
@@ -91,6 +91,8 @@ footer{
 .redesSociales{
     text-align: right;
     padding-right: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .generos{
@@ -182,7 +184,6 @@ h1{
         grid-template-rows: 0.3fr 0.1fr 0.1fr 5fr 0.01fr;
     }
     header{
-        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
         display: grid;
         grid-template-columns: none; 
         background: rgb(0,0,0);
@@ -215,6 +216,12 @@ h1{
         height: 100px;
        
     }
+    footer{
+        bottom: 0;
+        width: 100%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
     .AgusLerej{
         font-size: 10px;
     }
@@ -230,8 +237,5 @@ h1{
         height: 15px;
         margin: auto;
     }
-    footer{
-        bottom: 0;
-        width: 100%;
-    }
+    
 }
