--- a/css/index.css
+++ b/css/index.css
@@ -210,7 +210,7 @@ footer{
     border-radius: 10px;
     border: solid #353535 1.5px;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 4fr 1fr;
     margin-top: 10px;
 }
 .AgusLerej{
@@ -234,6 +234,8 @@ footer{
 .redesSociales{
     text-align: right;
     padding-right: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 .trackblock{
     display: grid;
@@ -314,7 +316,6 @@ footer{
 }
 @media(max-width: 320px){
     header{
-        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(213,9,9,0.7119368865710347) 30%, rgba(255,42,86,0.6895279229856005) 100%);
         display: grid;
         grid-template-columns: none; 
         background: rgb(0,0,0);
@@ -372,6 +373,10 @@ footer{
     .nombrecancion{
         display: block;
         font-size: 15px;
+    }
+    footer{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
     }
     .AgusLerej{
         font-size: 10px;
