--- a/css/detailtrack.css
+++ b/css/detailtrack.css
@@ -119,6 +119,7 @@ footer{
     display: grid;
     grid-template-columns: 4fr 1fr;
     margin-top: 10px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .AgusLerej{
     margin: auto;
