--- a/css/playlist.css
+++ b/css/playlist.css
@@ -1,3 +1,4 @@
+
 header{
     display: grid;
     background: rgb(0,0,0);
@@ -80,7 +81,10 @@ footer{
     display: grid;
     grid-template-columns: 4fr 1fr;
     margin-top: 10px;
-    width: 100%;
+   width: 98.5%;
+    bottom: 1px;
+    position: relative;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .AgusLerej{
     margin: auto;
