--- a/css/registro.css
+++ b/css/registro.css
@@ -1,7 +1,4 @@
-.total{
-    display: grid;
-    grid-template-rows: 0.5fr 0.1fr 2.80fr 0.3fr;
-}
+
 header{
     display: grid;
     background: rgb(0,0,0);
@@ -62,6 +59,10 @@ footer{
     display: grid;
     grid-template-columns: 4fr 1fr;
     border-radius: 15px;
+    width: 98.5%;
+    bottom: 1px;
+    position: fixed;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .AgusLerej{
     margin: auto;
