--- a/css/playlist.css
+++ b/css/playlist.css
@@ -1,3 +1,6 @@
+.total{
+    height: 100%;
+}
 header{
     display: grid;
     background: rgb(0,0,0);
@@ -80,7 +83,6 @@ footer{
     display: grid;
     grid-template-columns: 4fr 1fr;
     margin-top: 10px;
-   width: 98.5%;
     bottom: 1px;
     position: relative;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -110,10 +112,6 @@ footer{
     grid-template-columns: 1fr 1fr 1fr;
 }
 @media(max-width: 768px){
-    .total{
-        display: grid;
-        grid-template-rows: 0.4fr 0.1fr 6fr 0.2fr;
-    }
     header{
         height: 100px;
         position: static;
